# mipt-flat-2020-practice1

./: CMakeLists.txt  README.md
includes/checkers/: CMakeLists.txt  checkers.cpp  checkers.h
includes/constants/: constants.h
includes/regular_expr/: CMakeLists.txt  reg_exp.cpp  reg_exp.h
src/: main.cpp
